templates/log python.txt
Microsoft Windows [Version 6.0.6002]
Copyright (c) 2006 Microsoft Corporation.  All rights reserved.

C:\Users\Josie>cd
C:\Users\Josie

C:\Users\Josie>cd\

C:\>python django-admin.py startproject eventex
python: can't open file 'django-admin.py': [Errno 2] No such file or directory

C:\>dir
 Volume in drive C is ACER
 Volume Serial Number is 2ABC-308E

 Directory of C:\

16/06/2011  06:37    <DIR>          aa362d75517125450c0628
08/12/2009  04:40    <DIR>          ACER
28/04/2009  08:02    <DIR>          ACERNB
08/12/2009  04:40    <DIR>          ACERSW
18/09/2006  18:43                24 autoexec.bat
28/06/2009  04:46    <DIR>          book
18/09/2006  18:43                10 config.sys
18/08/2011  16:23    <DIR>          Django-1.3
07/11/2007  08:00            17.734 eula.1028.txt
07/11/2007  08:00            17.734 eula.1031.txt
07/11/2007  08:00            10.134 eula.1033.txt
07/11/2007  08:00            17.734 eula.1036.txt
07/11/2007  08:00            17.734 eula.1040.txt
07/11/2007  08:00               118 eula.1041.txt
07/11/2007  08:00            17.734 eula.1042.txt
07/11/2007  08:00            17.734 eula.2052.txt
07/11/2007  08:00            17.734 eula.3082.txt
07/11/2007  08:00             1.110 globdata.ini
07/11/2007  08:03           562.688 install.exe
07/11/2007  08:00               843 install.ini
07/11/2007  08:03            76.304 install.res.1028.dll
07/11/2007  08:03            96.272 install.res.1031.dll
07/11/2007  08:03            91.152 install.res.1033.dll
07/11/2007  08:03            97.296 install.res.1036.dll
07/11/2007  08:03            95.248 install.res.1040.dll
07/11/2007  08:03            81.424 install.res.1041.dll
07/11/2007  08:03            79.888 install.res.1042.dll
07/11/2007  08:03            75.792 install.res.2052.dll
07/11/2007  08:03            96.272 install.res.3082.dll
28/04/2009  06:17    <DIR>          Intel
22/03/2011  12:00    <DIR>          Netgear
20/01/2008  23:43    <DIR>          PerfLogs
18/08/2011  16:09    <DIR>          Program Files
18/08/2011  16:24    <DIR>          Python27
28/06/2009  04:21             2.796 RHDSetup.log
28/04/2009  06:25               184 Setup.log
21/02/2011  12:52    <DIR>          TIBCO
08/12/2009  04:38    <DIR>          Users
07/11/2007  08:00             5.686 vcredist.bmp
07/11/2007  08:09         1.442.522 VC_RED.cab
07/11/2007  08:12           232.960 VC_RED.MSI
22/07/2011  12:49    <DIR>          Windows
              28 File(s)      3.172.861 bytes
              14 Dir(s)  106.485.051.392 bytes free

C:\>python
Python 2.7.2 (default, Jun 12 2011, 15:08:59) [MSC v.1500 32 bit (Intel)] on win
32
Type "help", "copyright", "credits" or "license" for more information.
>>> django
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'django' is not defined
>>> import django
>>> django-admin.py startproject eventex
  File "<stdin>", line 1
    django-admin.py startproject eventex
                               ^
SyntaxError: invalid syntax
>>> django-admin.py
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'admin' is not defined
>>> django
<module 'django' from 'c:\python27\lib\site-packages\django\__init__.pyc'>
>>> djangoadmin
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'djangoadmin' is not defined
>>> python django-admin startproject eventex
  File "<stdin>", line 1
    python django-admin startproject eventex
                ^
SyntaxError: invalid syntax
>>> c:\python27\lib\site-packages\django\django-admin startproject eventex
  File "<stdin>", line 1
    c:\python27\lib\site-packages\django\django-admin startproject eventex
     ^
SyntaxError: invalid syntax
>>> python c:\python27\lib\site-packages\django\django-admin startproject evente
x
  File "<stdin>", line 1
    python c:\python27\lib\site-packages\django\django-admin startproject evente
x
           ^
SyntaxError: invalid syntax
>>> exit
Use exit() or Ctrl-Z plus Return to exit
>>> exit()

C:\>python c:\python27\lib\site-packages\django\django-admin
python: can't open file 'c:\python27\lib\site-packages\django\django-admin': [Er
rno 2] No such file or directory

C:\>python c:\python27\lib\site-packages\django\django-admin.py
python: can't open file 'c:\python27\lib\site-packages\django\django-admin.py':
[Errno 2] No such file or directory

C:\>python django-admin.py
python: can't open file 'django-admin.py': [Errno 2] No such file or directory

C:\>python
Python 2.7.2 (default, Jun 12 2011, 15:08:59) [MSC v.1500 32 bit (Intel)] on win
32
Type "help", "copyright", "credits" or "license" for more information.
>>> django
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'django' is not defined
>>> import django
>>> django
<module 'django' from 'c:\python27\lib\site-packages\django\__init__.pyc'>
>>> c:\pytho27\lib\site-packages\django\django-admin.py
  File "<stdin>", line 1
    c:\pytho27\lib\site-packages\django\django-admin.py
     ^
SyntaxError: invalid syntax
>>> django c:\pytho27\lib\site-packages\django\django-admin.py
  File "<stdin>", line 1
    django c:\pytho27\lib\site-packages\django\django-admin.py
           ^
SyntaxError: invalid syntax
>>> c:\pytho27\lib\site-packages\django\bin\django-admin.py
  File "<stdin>", line 1
    c:\pytho27\lib\site-packages\django\bin\django-admin.py
     ^
SyntaxError: invalid syntax
>>> exit()

C:\>python c:\python27\lib\site-packages\django\bin\django-admin.py
Usage: django-admin.py subcommand [options] [args]

Options:
  -v VERBOSITY, --verbosity=VERBOSITY
                        Verbosity level; 0=minimal output, 1=normal output,
                        2=all output
  --settings=SETTINGS   The Python path to a settings module, e.g.
                        "myproject.settings.main". If this isn't provided, the
                        DJANGO_SETTINGS_MODULE environment variable will be
                        used.
  --pythonpath=PYTHONPATH
                        A directory to add to the Python path, e.g.
                        "/home/djangoprojects/myproject".
  --traceback           Print traceback on exception
  --version             show program's version number and exit
  -h, --help            show this help message and exit

Type 'django-admin.py help <subcommand>' for help on a specific subcommand.

Available subcommands:
  cleanup
  compilemessages
  createcachetable
  dbshell
  diffsettings
  dumpdata
  flush
  inspectdb
  loaddata
  makemessages
  reset
  runfcgi
  runserver
  shell
  sql
  sqlall
  sqlclear
  sqlcustom
  sqlflush
  sqlindexes
  sqlinitialdata
  sqlreset
  sqlsequencereset
  startapp
  startproject
  syncdb
  test
  testserver
  validate

C:\>python c:\python27\lib\site-packages\django\bin\django-admin.py startproject
 eventex

C:\>python ./manage.py runserver
python: can't open file './manage.py': [Errno 2] No such file or directory

C:\>python c:\python27\lib\site-packages\django\conf\manage.py runserver
python: can't open file 'c:\python27\lib\site-packages\django\conf\manage.py': [
Errno 2] No such file or directory

C:\>python c:\python27\lib\site-packages\django\conf\project-template\manage.py
runserver
python: can't open file 'c:\python27\lib\site-packages\django\conf\project-templ
ate\manage.py': [Errno 2] No such file or directory

C:\>python c:\python27\lib\site-packages\django\conf\project-template\manage.py
runserver
python: can't open file 'c:\python27\lib\site-packages\django\conf\project-templ
ate\manage.py': [Errno 2] No such file or directory

C:\>python c:\python27\lib\site-packages\django\bin\django-admin.py startproject
 eventex
Error: [Error 183] Cannot create a file when that file already exists: 'C:\\even
tex'

C:\>python c:\eventex\manage.py runserver
Validating models...

0 errors found
Django version 1.3, using settings 'eventex.settings'
Development server is running at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[18/Aug/2011 17:23:01] "GET / HTTP/1.1" 200 2053

C:\>
C:\>python c:\eventex\manage.py startapp core

C:\>python c:\eventex\manage.py runserver
Validating models...

0 errors found
Django version 1.3, using settings 'eventex.settings'
Development server is running at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[18/Aug/2011 19:04:03] "GET / HTTP/1.1" 200 21
Unhandled exception in thread started by <bound method Command.inner_run of <dja
ngo.contrib.staticfiles.management.commands.runserver.Command object at 0x02A449
70>>
Traceback (most recent call last):
  File "c:\python27\lib\site-packages\django\core\management\commands\runserver.
py", line 107, in inner_run
Validating models...

0 errors found
Django version 1.3, using settings 'eventex.settings'
Development server is running at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.

C:\>python c:\eventex\manage.py runserver
Validating models...

0 errors found
Django version 1.3, using settings 'eventex.settings'
Development server is running at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[18/Aug/2011 20:14:47] "GET / HTTP/1.1" 200 21

C:\>